# Cronboard

./: pyproject.toml
.github/workflows/: release.yml
