[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cronboard"
authors = [
  { name = "Antonio Rodriguez", email = "kontakt@antoniorodriguez.no" },
]
description = "A terminal-based dashboard for managing cron jobs"
version = "0.5.2"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "cron-descriptor>=2.0.8",
    "croniter>=6.2.2",
    "paramiko>=4.0.0",
    "python-crontab>=3.3.0",
    "textual>=8.2.4",
    "textual-autocomplete>=4.0.6",
    "tomlkit>=0.14.0",
]

[project.urls]
Repository = "https://github.com/antoniorodr/cronboard"
Issues = "https://github.com/antoniorodr/cronboard/issues"

[project.scripts]
cronboard = "cronboard.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov=cronboard --cov=cronboard_widgets --cov=cronboard_encryption --cov-report=term-missing --cov-report=lcov:coverage.lcov"


[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "textual-dev>=1.8.0",
    "zensical>=0.0.33",
]

[tool.setuptools.package-data]
"cronboard" = ["static/css/*.tcss"]
